<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="left"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="50dp"
        android:padding="20dp">

        <!-- Recipient -->
        <TextView
            style="@style/dialog_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/label_recipient" />

        <EditText
            android:id="@+id/input_recipient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="phone"
            android:maxLength="15"
            android:hint="@string/hint_recipient" />

        <!-- Sender whitelist -->
        <TextView
            style="@style/dialog_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_sender" />

        <EditText
            android:id="@+id/input_sender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="50"
            android:hint="@string/hint_sender" />

        <!-- Keywords -->
        <TextView
            style="@style/dialog_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_keywords" />

        <EditText
            android:id="@+id/input_keywords"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="100"
            android:hint="@string/hint_keywords" />

        <!-- Blacklisted Senders -->
        <TextView
            style="@style/dialog_textview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/label_blacklist" />

        <EditText
            android:id="@+id/input_blacklist"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:maxLength="100"
            android:hint="@string/hint_blacklist" />

        <!-- Buttons -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/label_button_delete" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:padding="10dp"
                android:text="@string/label_button_save" />
        </LinearLayout>

    </LinearLayout>
</ScrollView>
